# zyxxy2

./: .gitignore  MY_FUNCTION_REFERENCE.txt  MY_demo_DUMP.py  croc.py  demo_mult_table.py  demo_trigo.py  draw_a_cat_with_gradient_fur.py  draw_a_flag_of_Japan.py  draw_a_princess.py  draw_a_stickman.py  draw_aa_vanishing_point.py  draw_puzzle_segments.py  draw_random_segments.py  draw_sun_and_moon.py  drawn_puzzle_Pythagoras.py  gradient_rectangle.py  main.py  penguins.py  pyproject.toml  pythagoras_11.py  pythagoras_ab.py
src/zyxxy2/: __init__.py  animation.py  canvas.py  clean.py  colors.py  coordinates.py  demo_all_shapes.py  demo_shape.py  demo_trigo.py  docs.py  examples.py  files.py  inspiration.txt  layers.py  nameless_inspirations.txt  pdf.py  settings.py  settings_class.py  shape_class.py  shape_functions.py  shape_style.py  tests.py  utils.py  widgets.py  word_bubbles.py
