[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zyxxy2"
version = "0.1336"
authors = [
  { name="Yulia V", email="yu51a5@proton.me" },
]
description = "zyxxy2"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

keywords = ["draw", "geometrical", "shapes"]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "pillow>=10.2.0",
    "matplotlib>=3.8.2",
]

[project.urls]
Repository = "https://github.com/yu51a5/zyxxy2"
